# ayachanbot

./: .gitignore  README.md  pyproject.toml  requirements.txt
ayachanbot/: __main__.py  bot.py  error.py  handlers.py  log.py  report.py  reports.py  source.py
ayachanbot/apis/: __init__.py  ascii2d.py  log.py  saucenao.py  whatanime.py
ayachanbot/services/: anime_image_searching.py
tests/: test_service_anime_image_searching.py
